added background img

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
 
 <style>
 	body {
-		background-color: #ffccff;
+		background-image: url("times_square_new_york-wide.jpg");
+		background-color: #cccccc;
 	}
+	
 </style>
 <body>
 	
